--- a/mycode/index.html
+++ b/mycode/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assign6.css">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
@@ -27,6 +27,6 @@
         </div>
        
     
-    <script src="assign6.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
